# p8fs

./: CLAUDE.md  Dockerfile  Dockerfile.heavy-cpu  Dockerfile.light  README.md  cluster-dreaming-testing.md  examples.yaml  getting_started.ipynb  how-to.md  pyproject.toml
p8fs/: .env  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml  pyproject.toml.bak  pytest.ini  run_dreaming_tests.sh  run_tests.sh  sessions.yaml  user-summary-example.yaml
p8fs-ai/: Claude.MD  MLX_TEST_RESULTS.md  README.md  SETUP_STATUS.md  pyproject.toml
p8fs-ai/docs/: CPU_INFERENCE_OPTIONS.md  SPEED_COMPARISON.md
p8fs-ai/scripts/: test_granite.py  test_granite_mlx.py
p8fs-ai/src/p8fs_ai/: __init__.py
p8fs-api/: .dockerignore  .env.example  .envrc  CLAUDE.md  Dockerfile  Dockerfile.optimized  OBSERVABILITY.md  README.md  WEBSITE_DEPLOYMENT.md  pyproject.toml  pyproject.toml.bak  run.sh  test_rem_nl.py
p8fs-api/docs/: README.md  content_headers.md  device-cli-summary.md  device-cli.md  local-development.md  mcp.md
p8fs-api/scripts/dev/: README.md  dev_device_approve.py  generate_dev_token.py  generate_server_jwt_signing_keys.py  get_dev_jwt.py
p8fs-api/src/p8fs_api/: __init__.py  __main__.py  main.py  observability.py  startup_health.py
p8fs-api/tests/: conftest.py
p8fs-api/tests/integration/: test_audio_chat.py  test_auth_repository.py  test_chat_integration.py  test_mcp_auth_integration.py  test_mcp_client_oauth_flow.py  test_mcp_fastmcp_client.py  test_mcp_integration.py  test_mcp_oauth_debug.py  test_mcp_oauth_full_flow.py  test_mcp_resources.py  test_mcp_search_integration.py  test_mcp_upload_integration.py  test_moments_integration.py  test_seaweedfs_presigned_urls.py  test_tenant_device_storage.py
p8fs-api/tests/unit/: test_auth.py  test_chat_controller.py  test_health.py  test_mcp.py  test_mcp_search.py  test_mcp_upload.py
p8fs-node/: CLAUDE.md  README.md  pyproject.toml
p8fs-node/.kreuzberg/mime/: b8a34bef2937376e.msgpack  dc811e987bab11f8.msgpack
p8fs-node/research/: content-processing-libraries-analysis.md  pdfium-integration-guide.md
p8fs-node/rust/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-and-run.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  quick_test.py  run_tests.sh  test_embeddings.py  test_embeddings.sh
p8fs-node/rust/.cargo/: config.toml
p8fs-node/rust/p8fs-node/: Cargo.toml
p8fs-node/src/p8fs_node/: __init__.py
p8fs-node/tests/: __init__.py  conftest.py
p8fs-node/tests/integration/: __init__.py  run_all_integration_tests.py
p8fs-node/tests/unit/: __init__.py
p8fs/.kreuzberg/mime/: 467b5eed12b3f26e.msgpack  5377b9c364d34de1.msgpack  5a6f48cd642617b0.msgpack  6d9ea94b02ef7e7f.msgpack  79aa923ca86aa27a.msgpack  7e7fd2c94be91de5.msgpack
p8fs/docs/: 00 devEx.md  00 user-session-management.md  01 getting-started.md  02 memory-proxy.md  03 type-mappings.md  04 engram-specification.md  05 embeddings.md  06 graph-processing.md  07 agentic-system.md  08 function-registration.md  09 doc-parsers.md  10 workers.md  11-seaweedfs-events.md  experimental-image-search.md  moment-session-updates.md  pre-commit-hooks.md  utils.md
p8fs/docs/REM/: README.md  deployment.md  design.md  testing.md
p8fs/docs/providers/: tidb-provider-readme.md
p8fs/examples/: tidb_provider_example.py
p8fs/extensions/migrations/: README.md
p8fs/extensions/sql/: 00_install.sql  01_entity_schema.sql  02_entity_data.sql  03_functions.sql  10_test_data.sql  README.md
p8fs/extensions/tidb/: init-tidb.sh
p8fs/scripts/: README.md  README_TIKV_TESTING.md  apply_migrations_to_cluster.py  atlas-schema-sync.sh  atlas.hcl  check_tenant_activity.sh  compile_migrations.py  demo_moments_generation.py  demo_moments_simple.py  diagnostic_tracing_user_files.py  generate_sql_from_models.py  generate_tidb_sql_from_models.py  populate_with_embeddings.py  run_tikv_test.sh  setup_test_data.py  setup_test_moments.py  sync_test_schema.py  test_dreaming_end_to_end.py  test_kv_deployment.py  test_nats_worker.py  test_resource_affinity.py  test_s3_upload.py  test_save_memory_tikv.py  test_tidb_resource_affinity.py  tidb_migrate.sh  tidb_query.py  upload_release_test_file.py
p8fs/scripts/diagnostics/: README.md  dream_moment_email_flow.py  dream_moment_email_flow.sh
p8fs/scripts/rem/: README.md  cluster_dreaming_test.sh  run_dreaming.py  seed_test_data.py  test_rem_queries.py  test_sample_01_queries.py  validate_affinity_quality.py  validate_moment_quality.py
p8fs/src/p8fs/: __init__.py  cli.py  client.py  observability.py
p8fs/tests/: README.md  __init__.py  conftest.py  engram_example.json  test_audio_transcription.py  test_cli_sample_files.py  test_email_sending.py  test_moment_generation_and_email.py  test_workers.py
p8fs/tests/integration/: README.md  README_EMBEDDINGS.md  REM_QUERY_TESTS_SUMMARY.md  REM_QUERY_TIDB_TESTS_SUMMARY.md  TESTING_GUIDE.md  graph_test_summary.md  init-db.sql  run_graph_tests.py  run_openai_integration.sh  test_01_database_operations.py  test_01_database_operations_refactored.py  test_02_resource_affinity.py  test_03_entity_extraction.py  test_agent_document_processor.py  test_agent_tracing.py  test_chat_completions_with_session.py  test_chat_history_with_moments.py  test_clean_embedding_fix.py  test_dreaming_end_to_end.py  test_dreaming_end_to_end.py.bak  test_dreaming_integration.py  test_dreaming_openai_integration.py  test_dreaming_real_openai.py  test_embedding_integration.py  test_embeddings_e2e.py  test_graph_kv_and_entities.py  test_integration_graph_relationships.py  test_integration_language_model_entities.py  test_kv_functionality.py  test_kv_round_trip_verification.py  test_memory_proxy_integration.py  test_message_history_verification.py  test_moment_builder.py  test_moment_builder_isolated.py  test_moment_creation_flow.py  test_natural_language_sql.py  test_notebook_integration.py  test_protocol_adaptation_comprehensive.py  test_provider_examples.py  test_query_functionality.py  (+20 more)
p8fs/tests/sample_data/: resources_sample.py  test_resources.json
(+588 files in other folders)
