[project]
name = "p8fs-ai"
version = "0.1.0"
description = "Fine-tuning and deployment of open-source models for REM operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "datasets>=2.16.0",
    "peft>=0.7.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "mlx>=0.29.4",
    "mlx-lm>=0.28.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
vllm = [
    "vllm>=0.2.0",
]
quantization = [
    "bitsandbytes>=0.41.0; platform_system != 'Darwin'",
    "auto-gptq>=0.5.0; platform_system != 'Darwin'",
    "autoawq>=0.1.0; platform_system != 'Darwin'",
]
annotation = [
    "streamlit>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
