[workspace]
resolver = "2"
members = ["p8fs-node"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["P8FS Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
once_cell = "1"
embed_anything = "0.6.4"
candle-core = "0.9"
pdf-extract = "0.7"
hound = "3.5"
docx-rs = "0.4"
pulldown-cmark = "0.11"
regex = "1"
bytes = "1"
tower = "0.4"
hyper = "1.0"
mime = "0.3"