[package]
name = "p8fs-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
embed_anything = { workspace = true }
candle-core = { workspace = true }
pdf-extract = { workspace = true }
hound = { workspace = true }
docx-rs = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
mime = { workspace = true }

[[bin]]
name = "p8fs-node"
path = "src/main.rs"